[package]
name = "thetadatadx"
version = "12.0.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "No-JVM ThetaData Terminal — native Rust SDK for direct MDDS (gRPC) and FPSS (TCP) market data access"
documentation = "https://docs.rs/thetadatadx"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["thetadata", "market-data", "tick-data", "zero-copy", "low-latency"]
categories = ["finance", "api-bindings", "network-programming", "encoding"]
readme = "README.md"

[lints]
workspace = true

[lib]
name = "thetadatadx"
path = "src/lib.rs"

[dependencies]
thetadatadx-engine = { path = "../thetadatadx-engine" }

[features]
default = []
arrow = ["thetadatadx-engine/arrow"]
polars = ["thetadatadx-engine/polars"]
frames = ["thetadatadx-engine/frames"]
config-file = ["thetadatadx-engine/config-file"]
metrics-prometheus = ["thetadatadx-engine/metrics-prometheus"]
mimalloc-allocator = ["thetadatadx-engine/mimalloc-allocator"]
live-tests = ["thetadatadx-engine/live-tests"]
__test-helpers = ["thetadatadx-engine/__test-helpers"]
