[package]
name = "thetadatadx-py"
version = "12.0.0"
edition = "2021"
rust-version = "1.88"
description = "Python bindings for thetadatadx — native ThetaData SDK powered by Rust"
license = "Apache-2.0"
homepage = "https://github.com/userFRM/ThetaDataDx"
repository = "https://github.com/userFRM/ThetaDataDx"
documentation = "https://github.com/userFRM/ThetaDataDx/blob/main/docs/api-reference.md"
readme = "README.md"
# PyPI package only; never publish this PyO3 shim to crates.io.
publish = false

[lib]
name = "thetadatadx"
crate-type = ["cdylib"]
doc = false

[dependencies]
# The native ThetaData implementation we're wrapping in Python bindings.
thetadatadx = { path = "../../crates/thetadatadx", features = ["arrow", "__internal"] }
tdbe = { version = "0.14.0", path = "../../crates/tdbe" }

# Direct prost dep for decoding `ResponseData` bytes in the
# `decode_response_bytes` hook. Pinned to the same version the engine
# crate consumes so the wire types resolve to a single instantiation.
prost = "=0.14.3"

# PyO3 bindings. We target the stable ABI so one wheel per platform supports
# every Python version from 3.12 upward.
pyo3 = { version = "=0.28.3", features = ["abi3-py312", "multiple-pymethods"] }

# Bridge between pyo3 and tokio so generated `*_async` methods return real
# awaitables backed by the shared runtime singleton (no second runtime is
# spun up per call). Pin to the matching release for pyo3 0.28.
pyo3-async-runtimes = { version = "=0.28.0", features = ["tokio-runtime"] }

# Apache Arrow columnar pipeline for the DataFrame adapter. We pick the
# upstream `arrow` crate with the `pyarrow` feature over the third-party
# `pyo3-arrow` because:
#   1. Arrow Apache owns the pyo3 compat matrix — version bumps ship
#      together (arrow 58 <-> pyo3 0.28), so we stay on the canonical
#      upgrade path.
#   2. Single dep, fewer surfaces to audit. `arrow::array::*`,
#      `arrow::datatypes::*`, `arrow::record_batch::RecordBatch`,
#      `arrow::pyarrow::{IntoPyArrow, PyArrowType}` is all we need.
#   3. Zero-copy to pyarrow via the Arrow C Data Interface, identical
#      semantics to pyo3-arrow.
arrow = { version = "58.1.0", features = ["pyarrow"] }

# Async bridge: run tokio futures from sync Python
tokio = { version = "1.52.1", features = ["rt-multi-thread"] }

# Error derivation for the 365-day auto-chunk date-math module. Matches
# the workspace crate's pin so we never drift on the trait surface.
thiserror = "2.0.18"

# Structured diagnostics for generator-emitted streaming helpers. Trace-level
# emission only — shutdown-time `tx.send` failures (Python rx dropped before
# tx side) are normal and must not spam default logs.
tracing = "0.1.44"

# `tracing_subscriber::Layer` trait + registry for the Python-logging
# bridge (see `logging_bridge.rs`). The `registry` feature pulls in
# `tracing_subscriber::registry::LookupSpan` which the `Layer` impl
# requires. No `fmt` subscriber — we forward to Python's stdlib
# logging, not to stderr.
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["registry"] }

# POSIX pipe + read for the asyncio-native `streaming_async()` surface.
# The pyclass allocates a self-pipe in `__aenter__`, hands the write-end
# to the Rust core via `connect_iter_with_wake_keep_handle`, and registers
# the read-end on the asyncio event loop with `loop.add_reader`. Bounded
# to Unix targets — Windows asyncio uses ProactorEventLoop which does
# not support `add_reader` on pipes; the pyclass raises at construction
# time on non-Unix.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Match the main workspace's strict bar. This crate is `[workspace.exclude]`d
# in the root `Cargo.toml` (it has its own toolchain / feature footprint), so
# it can't inherit via `[lints] workspace = true` — mirror the rules locally.
[lints.rust]
warnings = "deny"
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
# PyO3 `#[pymethods]` become flat free-function signatures, one param per
# optional kwarg. Generated endpoints expose every query parameter from
# `endpoint_surface.toml` as a separate `Option<T>` arg, routinely hitting
# 10-27 params. The "too many arguments" heuristic is a style lint built
# for hand-written Rust APIs; it doesn't apply to generator-emitted binding
# crates where the argument list is the language's public contract.
too_many_arguments = "allow"
