[build-system]
requires = ["maturin>=1.9.4,<2.0"]
build-backend = "maturin"

[project]
name = "thetadatadx"
dynamic = ["version"]
description = "No-JVM ThetaData Terminal — native Rust SDK for direct market data access (Python bindings)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "userFRM" }]
keywords = ["thetadata", "market-data", "options", "streaming", "grpc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
Homepage = "https://github.com/userFRM/ThetaDataDx"
Repository = "https://github.com/userFRM/ThetaDataDx"
Documentation = "https://github.com/userFRM/ThetaDataDx/blob/main/docs/api-reference.md"
Discord = "https://discord.thetadata.us/"

[tool.maturin]
# Mixed Rust + Python layout: hand-written `.pyi` stubs and the
# `py.typed` PEP 561 marker live in `python/thetadatadx/`. Maturin
# merges these into the wheel alongside the compiled `.so` extension
# emitted from `src/lib.rs`.
python-source = "python"
# Stable ABI: one wheel per platform covers every CPython 3.9+ release.
#
# The `abi3-py39` feature is unconditionally enabled here even on
# the free-threaded `3.13t` / `3.14t` build matrix entries — PyO3
# emits a benign warning at build time for those entries
# ("free-threaded build ignores abi3"), but the wheel selection is
# correct either way: maturin's
# `--interpreter python3.13t` flag overrides the abi3 emission and
# tags the wheel `cp313-cp313t-*` (PEP 703 free-threaded ABI, not
# abi3). The abi3 feature is then a no-op on those builds. Documented
# as intended; flipping it on / off per matrix entry would require a
# maturin overlay file that maintains two source-of-truth feature
# lists. See the GH Actions log for the documented warning shape.
features = ["pyo3/abi3-py39"]

[project.optional-dependencies]
# Arrow columnar pipeline (feat/arrow-columnar-dataframe):
#   - `.to_arrow()` on a typed `<Tick>List` wrapper returns a
#     `pyarrow.Table` zero-copy from Rust via the Arrow C Data
#     Interface. Requires `pyarrow>=14.0` so the C-Data bindings
#     match the `arrow-rs` 58 on the Rust side.
#   - `.to_pandas()` calls `pyarrow.Table.to_pandas()` under the hood,
#     which is zero-copy for numeric columns on pandas 2.x
#     (numpy-backed arrays alias the underlying Arrow buffers).
#     pandas <2.0 works but forces a full copy per column.
#   - `.to_polars()` calls `polars.from_arrow()`. polars 0.20+
#     consumes Arrow buffers directly.
arrow = ["pyarrow>=14.0"]
pandas = ["pandas>=2.1", "pyarrow>=14.0"]
polars = ["polars>=0.20", "pyarrow>=14.0"]
all = ["pandas>=2.1", "polars>=0.20", "pyarrow>=14.0"]
