[package]
name = "thetadatadx-napi"
version = "7.3.1"
edition = "2021"
description = "TypeScript/Node.js bindings for thetadatadx — native ThetaData SDK powered by Rust"
license = "GPL-3.0-or-later"
homepage = "https://github.com/userFRM/ThetaDataDx"
repository = "https://github.com/userFRM/ThetaDataDx"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
thetadatadx = { path = "../../crates/thetadatadx" }
tdbe = { version = "0.10.0", path = "../../crates/tdbe" }

napi = { version = "3.8.5", features = ["async", "tokio_rt", "serde-json", "napi6"] }
napi-derive = "3.5.4"

tokio = { version = "1.52.1", features = ["rt-multi-thread"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Structured diagnostics for generator-emitted streaming helpers. Trace-level
# emission only — shutdown-time `tx.send` failures (JS rx dropped before tx
# side) are normal and must not spam default logs.
tracing = "0.1.44"

[build-dependencies]
napi-build = "2.3.1"
