[package]
name = "thetadatadx-napi"
version = "8.0.20"
edition = "2021"
description = "TypeScript/Node.js bindings for thetadatadx — native ThetaData SDK powered by Rust"
license = "Apache-2.0"
homepage = "https://github.com/userFRM/ThetaDataDx"
repository = "https://github.com/userFRM/ThetaDataDx"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
thetadatadx = { path = "../../crates/thetadatadx" }
tdbe = { version = "0.12.1", path = "../../crates/tdbe" }

napi = { version = "3.8.5", features = ["async", "tokio_rt", "serde-json", "napi6", "chrono_date"] }
napi-derive = "3.5.4"
chrono = { version = "=0.4.44", default-features = false, features = ["alloc", "clock"] }

tokio = { version = "1.52.1", features = ["rt-multi-thread"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Structured diagnostics for generator-emitted streaming helpers. Trace-level
# emission only — shutdown-time `tx.send` failures (JS rx dropped before tx
# side) are normal and must not spam default logs.
tracing = "0.1.44"

[build-dependencies]
napi-build = "2.3.1"

# Match the main workspace's strict bar. This crate is `[workspace.exclude]`d
# in the root `Cargo.toml` (it has its own toolchain / feature footprint), so
# it can't inherit via `[lints] workspace = true` — mirror the rules locally.
[lints.rust]
warnings = "deny"
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
# napi-rs `#[napi]` methods become flat free-function signatures, one param
# per optional kwarg. Generated endpoints expose every query parameter from
# `endpoint_surface.toml` as a separate `Option<T>` arg, routinely hitting
# 10-27 params. The "too many arguments" heuristic is a style lint built
# for hand-written Rust APIs; it doesn't apply to generator-emitted binding
# crates where the argument list is the language's public contract.
too_many_arguments = "allow"
