[package]
name = "thetadatadx-cli"
version = "8.0.14"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "CLI for ThetaDataDx — query ThetaData from your terminal"
homepage.workspace = true
repository.workspace = true
license.workspace = true
# Internal CLI — never published to crates.io. Only `tdbe` and
# `thetadatadx` are published (see publish-crate job in ci.yml).
publish = false

[lints]
workspace = true

[[bin]]
name = "tdx"
path = "src/main.rs"

[dependencies]
thetadatadx = { path = "../../crates/thetadatadx" }
tdbe = { version = "0.12.0", path = "../../crates/tdbe" }
clap = { version = "4.6.1", features = ["derive"] }
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros"] }
sonic-rs = "0.5.8"
comfy-table = "7.2.2"
