[package]
name = "thetadatadx-cli"
version = "13.0.0-rc.2"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "CLI for ThetaData — query ThetaData from your terminal"
homepage.workspace = true
repository.workspace = true
license.workspace = true
# Internal CLI — never published to crates.io. Only `thetadatadx` is
# published (see publish-crate job in ci.yml).
publish = false

[lints]
workspace = true

[[bin]]
name = "thetadatadx"
path = "src/main.rs"

[dependencies]
thetadatadx = { path = "../../crates/thetadatadx", features = ["__internal"] }
clap = { version = "4.6.1", features = ["derive"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
sonic-rs = "0.5.8"
comfy-table = "7.2.2"
