[package]
name = "local-terminal-patcher"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Patch the local ThetaTerminal jar to tolerate legacy 6-field NBBO rows (issue #571)"
homepage.workspace = true
repository.workspace = true
license.workspace = true
# Internal tool -- bundles the patched .class files and rewrites the
# upstream jar in place. Never published to crates.io.
publish = false

[lints]
workspace = true

[[bin]]
name = "local-terminal-patcher"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
sha2 = "0.11.0"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.27"
filetime = "0.2"
